--- a/AngularApp/projects/app-service-diagnostics/src/app/app.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/app.component.html
@@ -2,6 +2,6 @@
     <generic-comms></generic-comms>
     <router-outlet></router-outlet>
     <genie-panel></genie-panel>
-    <risk-alerts-panel></risk-alerts-panel>
+    <!-- <risk-alerts-panel></risk-alerts-panel> -->
     <fabric-feedback></fabric-feedback>
 </tabs>
