--- a/AngularApp/projects/diagnostic-data/src/lib/components/insights-v4/insights-v4.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/insights-v4/insights-v4.component.html
@@ -5,7 +5,57 @@
   <div *ngFor="let insight of insights" class="insight-container" attr.name="{{insight.title}}"
     attr.aria-label="{{insight.title}}" attr.aria-expanded="{{insight.isExpanded}}" role="button"
     (keyup.enter)="toggleInsightStatus(insight)">
-    <div div class="panel insight-panel">
+    <div div class="panel notification-panel">
+      <div class="panel-heading" (click)="toggleInsightStatus(insight)">
+        <h5 class="panel-title" [class.clickable-header]="hasContent(insight)">
+          <div style="display: table;">
+            <div style="display: table-row">
+              <div style="display: table-cell">
+                <span class="fa status-icon" [class.fa-exclamation-circle]="insight.status === InsightStatus.Critical"
+                  [class.fa-exclamation-triangle]="insight.status === InsightStatus.Warning"
+                  [class.fa-check-circle]="insight.status === InsightStatus.Success"
+                  [class.fa-info-circle]="insight.status === InsightStatus.Info"></span>
+              </div>
+              <div style="display: table-cell;width:100%;font-size: 14px;">
+                {{insight.title}}
+              </div>
+              <div *ngIf="hasContent(insight)" style="display: table-cell" class="pull-right">
+                <span tabindex="0" class="fa insight-expand-icon" [class.fa-angle-right]="hasContent(insight) && !insight.isExpanded"
+                  [class.fa-angle-down]="hasContent(insight) && insight.isExpanded"></span>
+              </div>
+            </div>
+          </div>
+        </h5>
+      </div>
+
+      <div class="panel-body notification-body" [hidden]="!(insight.isExpanded && insight.hasData())">
+        <table>
+          <tbody>
+            <tr *ngFor="let key of insight.getKeys()">
+              <!-- <td class="table-key">
+                <b>{{key}}</b>
+              </td> -->
+              <td class="width:100%; font-size:13px!important">
+                <markdown-text [markdownData]="insight.data[key]" [detector]="detector"></markdown-text>
+              </td>
+            </tr>
+
+            <ng-container *ngIf="hasSolutions(insight)">
+              <tr>
+                <!-- <td class="table-key">
+                  <b>Troubleshooting and Next Steps</b>
+                </td> -->
+                <td class="table-value">
+                  <solutions [solutions]="insight.solutions"></solutions>
+                </td>
+              </tr>
+            </ng-container>
+          </tbody>
+        </table>
+      </div>
+
+    </div>
+    <!-- <div div class="panel insight-panel">
       <div class="panel-heading" (click)="toggleInsightStatus(insight)">
         <h5 class="panel-title" [class.clickable-header]="hasContent(insight)">
           <div style="display: table;">
@@ -54,7 +104,7 @@
         </table>
       </div>
 
-    </div>
+    </div> -->
   </div>
 </ng-template>
 
