Add risk alert service

--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
@@ -127,8 +127,8 @@
     <div *ngIf="showRiskSection" class="section-container">
       <h2 class="section-title">Risk alerts</h2>
       <div class="home-tiles">
-        <ng-container *ngFor="let risk of risks">
-          <risk-tile [risk]="risk"></risk-tile>
+        <ng-container *ngFor="let riskAlertConfig of riskAlertConfigs">
+          <risk-tile [riskAlertConfig]="riskAlertConfig"></risk-tile>
         </ng-container>
       </div>
     </div>
