--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.html
@@ -1,4 +1,5 @@
-<div class="solution-container">
+<button (click)="performAction()" type="button" class="custom-solution-button">{{solution.Title}}</button>
+<!-- <div class="solution-container">
 
   <div *ngIf="solution.DescriptionMarkdown" class="my-2 mx-0">
     <markdown [data]="solution.DescriptionMarkdown"></markdown>
@@ -55,4 +56,4 @@
     <span class="mr-3">App: <span class="app-name">{{appName}}</span></span>
     <button (click)="performAction()" type="button" class="custom-button">{{solution.Title}}</button>
   </div>
-</ng-template>
+</ng-template> -->
