--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.scss
@@ -26,6 +26,29 @@ html, body {
     color: #286090;
   }
 
+  .custom-solution-button {
+    margin-left: 0px;
+    display: inline-block;
+    /* width: 100%; */
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    background-color: #0078d4;
+    border-color: #0078d4;
+    color: #fff;
+    fill: white;
+    font-size: 13px;
+    box-sizing: border-box;
+    height: 24px;
+    font-size: 13px;
+    line-height: 20px;
+    font-weight: 600;
+    cursor: pointer;
+    border: 1px solid;
+    padding: 0 20px;
+    margin: 0;
+  }
+
   .custom-button {
     border: 1px solid darkgray;
     padding-left: 2em;
