--- a/AngularApp/projects/diagnostic-data/src/lib/components/notification/notification.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/notification/notification.component.scss
@@ -6,6 +6,14 @@
     margin-bottom: 0px;
 }
 
+.notification-container {
+    margin-bottom: 0px;
+}
+
+.notification-container:last-child {
+    margin-bottom: 0px;
+}
+
 .insight-panel {
     border-left-width: 4px;
     background-color: #f3f3f3;
@@ -15,7 +23,7 @@
 .notification-panel {
     border-top-width: 1px;
     border-top-style: solid;
-    padding: 10px 5px 10px 10px;
+    padding: 0px 5px 10px 10px;
     width: 100%;
     font-family: 'Segoe UI','Open Sans','Helvetica Neue',sans-serif;
     color: #444;
@@ -24,7 +32,7 @@
 .notification-body {
     font-size: 13px!important;
     line-height: normal;
-    display: block;
+    //display: block;
     line-height: 18px;
     max-height: 144px;
     overflow: hidden;
