--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.html
@@ -1,4 +1,4 @@
-<button (click)="performAction()" type="button" class="custom-solution-button">{{solution.Title}}</button>
+<div (click)="performAction()" type="button" class="custom-solution-button">{{solution.Title}}</div>
 <!-- <div class="solution-container">
 
   <div *ngIf="solution.DescriptionMarkdown" class="my-2 mx-0">
