--- a/AngularApp/projects/diagnostic-data/src/lib/components/notification/notification.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/notification/notification.component.html
@@ -1,12 +1,9 @@
-<!-- This is the common template for rendering insights.
-     If there is a title I will wrap it in a container,
-     otherwise I will show it by itself -->
      <ng-template #insightView>
       <div *ngFor="let insight of insights" class="notification-container" attr.name="{{insight.title}}"
         attr.aria-label="{{insight.title}}" attr.aria-expanded="{{insight.isExpanded}}" role="button"
         (keyup.enter)="toggleInsightStatus(insight)">
-        <div div class="panel notification-panel">
-          <div class="panel-heading" (click)="toggleInsightStatus(insight)">
+        <div div class="notification-panel">
+          <div class="notification-panel-heading" (click)="toggleInsightStatus(insight)">
             <h5 class="panel-title" [class.clickable-header]="hasContent(insight)">
               <div style="display: table;">
                 <div style="display: table-row">
@@ -19,10 +16,6 @@
                   <div style="display: table-cell;width:100%;font-size: 14px;">
                     {{insight.title}}
                   </div>
-                  <!-- <div *ngIf="hasContent(insight)" style="display: table-cell" class="pull-right">
-                    <span tabindex="0" class="fa insight-expand-icon" [class.fa-angle-right]="hasContent(insight) && !insight.isExpanded"
-                      [class.fa-angle-down]="hasContent(insight) && insight.isExpanded"></span>
-                  </div> -->
                 </div>
               </div>
             </h5>
