--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-view/detector-view.component.html
@@ -69,7 +69,7 @@
   </div>
 
 
-  <div *ngFor="let data of detectorDataLocalCopy.dataset  | renderfilter:isAnalysisView" [ngClass]="{'dynamic-data-container': isRiskAlertDetector}">
+  <div *ngFor="let data of detectorDataLocalCopy.dataset  | renderfilter:isAnalysisView" [ngClass]="{'dynamic-data-container': !isRiskAlertDetector}">
     <dynamic-data [isRiskAlertDetector]="isRiskAlertDetector" [isAnalysisView]="isAnalysisView" [diagnosticData]="data" [startTime]="startTime" [endTime]="endTime"
       [detectorEventProperties]="detectorEventProperties" [developmentMode]="developmentMode" [executionScript]="script"
       [detector]="detector" [xAxisPlotBands]="xAxisPlotBands" [zoomBehavior]="zoomBehavior"
