connectivity check done

--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks.component.scss
@@ -17,3 +17,16 @@
 .ms-Layer {
     position: absolute;
 }
+
+.interactive-check-button{
+    margin-left:5px;
+}
+
+.interactive-check-button .ms-Button{
+    height: 28px;
+    margin-top: -4px;
+}
+
+.interactive-section{
+    margin-top: 10px;
+}
