--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks.component.html
@@ -10,25 +10,9 @@
     </div>
     <!-- markdown https://stackblitz.com/edit/ngx-markdown?file=src%2Fapp%2Fapp.component.html -->
     <div class="checker-container" *ngFor="let viewModel of checkResultViews; index as i">
-        <checker-list [viewModel]= "viewModel">
-            <div *ngIf="viewModel.interactivePayload != null">
-                <div [ngSwitch]="viewModel.interactivePayload.type">
-                    <div *ngSwitchCase="0"> <input #text><button (click)="interactiveCallBack(text.value, viewModel.interactivePayload.callBack, i)">submit</button></div>
-                    <div *ngSwitchCase="1">interactive 1</div>
-                </div>
-            </div>
-            <div class="step-container" *ngFor="let step of viewModel.stepResultViews">
-                <checker-list [viewModel]= "step">
-                    <markdown class="step-markdown" ngPreserveWhitespaces [data]="step.markdown"></markdown>
-                </checker-list>
-            </div>
-            <markdown class="check-markdown" ngPreserveWhitespaces [data]="viewModel.markdown"></markdown>
+        <checker-list [viewModel]= "viewModel" [expandable]="true">
         </checker-list>
     </div>
-
-    <checker-list [viewModel]= "{name:'feedback', title: 'Please give us your feedback!', status: 2, loadingStatus: 1, expanded: true}">
-        feedback!
-    </checker-list>
 
     <!--<div class="sessions">
         <daas-sessions [refreshSessions]="refreshSessions" diagnoserNameLookup="CLR Profiler" [scmPath]="scmPath" [siteToBeDiagnosed]="siteToBeDiagnosed"></daas-sessions>
