--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
@@ -100,6 +100,7 @@
 
 
 <ng-template #newHomePage>
+  <risk-alerts-notification></risk-alerts-notification>
   <fab-command-bar tabindex="0" contentClass="fab-command-bar-class">
     <items>
       <fab-command-bar-item key="askGenie" text="Ask Genie" [iconProps]="{ iconName: 'ChatInviteFriend' }"
