--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/integrated-solutions-view/integrated-solutions-view.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/integrated-solutions-view/integrated-solutions-view.component.html
@@ -1,4 +1,4 @@
-<risk-alerts-notification *ngIf="!keystoneSolutionView"></risk-alerts-notification>
+<risk-alerts-notification [isKeystoneSolutionView]="keystoneSolutionView"></risk-alerts-notification>
 <div *ngIf="keystoneSolutionView else genericSolutionView" class="keystone-solution-container">
   <div class="solution-header">We think we found you a solution!</div>
   <div class="solution-description">Customers with similar issues recently were able to solve it by following the
