--- a/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/solution/solution.component.html
@@ -56,33 +56,6 @@
   </div>
 </ng-template>
 
-
-<!-- style="
-margin-left: 0px;
-display: inline-block;
-/* width: 100%; */
-white-space: nowrap;
-overflow: hidden;
-text-overflow: ellipsis;
-background-color: #0078d4;
-border-color: #0078d4;
-color: #fff;
-fill: white;
-font-size: 13px;
-box-sizing: border-box;
-height: 24px;
-font-size: 13px;
-line-height: 20px;
-font-weight: 600;
-cursor: pointer;
-border: 1px solid;
-padding: 0 20px;
-margin: 0;
-" -->
-
 <ng-template #newSolution>
-  <div (click)="performAction()" type="button" class="custom-solution-button"
-
->{{solution.Title}} ></div>
+  <div (click)="performAction()" type="button" class="custom-solution-button">{{solution.Title}}</div>
 </ng-template>
-
