--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/risk-alerts-notification/risk-alerts-notification.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/risk-alerts-notification/risk-alerts-notification.component.html
@@ -1,9 +1,13 @@
 <ng-container *ngIf="showEmergingNotification">
-  <fab-message-bar [messageBarType]="type" isMultiline="false" dismissButtonAriaLabel="Close"
-    [truncated]="true" [styles]="styles" overflowButtonAriaLabel="See more">{{_riskAlertService.emergingNotificationMessageBar.title}} <a (click)="openRiskAlertsPanel(_riskAlertService.emergingNotificationMessageBar.id)">View more details</a>.</fab-message-bar>
+  <fab-message-bar [messageBarType]="type" isMultiline="false" dismissButtonAriaLabel="Close" [truncated]="true"
+    [styles]="styles" overflowButtonAriaLabel="See more">{{_riskAlertService.emergingNotificationMessageBar.title}} <a
+      (click)="openRiskAlertsPanel(_riskAlertService.emergingNotificationMessageBar.id)">View more details</a>.
+  </fab-message-bar>
 </ng-container>
 
 <ng-container *ngIf="showRiskAlertsNotification">
-  <fab-message-bar [messageBarType]="type" isMultiline="false" dismissButtonAriaLabel="Close"
-    [truncated]="true" [styles]="styles" overflowButtonAriaLabel="See more">{{notificationMessage}} <a (click)="openRiskAlertsPanel(_riskAlertService.caseSubmissionRiskNotificationId)">View more details</a>.</fab-message-bar>
+  <fab-message-bar [messageBarType]="type" isMultiline="false" dismissButtonAriaLabel="Close" [truncated]="true"
+    [styles]="styles" overflowButtonAriaLabel="See more">{{notificationMessage}} <a
+      (click)="openRiskAlertsPanel(_riskAlertService.caseSubmissionRiskNotificationId)">View more details</a>.
+  </fab-message-bar>
 </ng-container>
