--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/network-checks/network-checks.component.html
@@ -10,7 +10,7 @@
     </div>
     <!-- markdown https://stackblitz.com/edit/ngx-markdown?file=src%2Fapp%2Fapp.component.html -->
     <div class="checker-container" *ngFor="let viewModel of checkResultViews; index as i">
-        <checker-list [viewModel]= "viewModel" [expandable]="true">
+        <checker-list [viewModel]= "viewModel" [expandable]="viewModel.expandable">
         </checker-list>
     </div>
 
