--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/networkcheck-feedback/networkcheck-feedback.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/networkcheck-feedback/networkcheck-feedback.component.html
@@ -4,8 +4,8 @@
     (onOpen)="onOpenFeedbackPanel()" (onOpened)="onOpened()" [renderFooterContent]="feedbackFooter" [isFooterAtBottom]="true" [styles]="{overlay:{visibility: hideOverlay ? 'hidden':'visible'}}">
     <!-- Feedback Panel Header -->
     <div style="margin-bottom: 25px;">
-        <h3 class="feedback-panel-header" style="top: 0px; font-size: 24px; font-weight: 600;">Feedback</h3>
-        <p class="feedback-panel-header" style="top: 35px">Network Checking Tool - {{siteName}}</p>
+        <h3 class="feedback-panel-header" style="top: 0px; font-size: 24px; font-weight: 600; left: 15px">Feedback</h3>
+        <p class="feedback-panel-header" style="top: 35px; left: 16px">Network Checking Tool - {{siteName}}</p>
         <div class="hover-item panel-close" (click)="dismissedFeedbackHandler()">
           <div class="tooltiptext" style="margin-top: 35px;">close</div>
         </div>
